Refine `ProductVideoGallery` and `VideoDetailsModal` styles: update video thumbnail rendering logic, enhance button design, adjust modal layout for better responsiveness, and fix overflow issues.

--- a/src/admin/enhancer/style.scss
+++ b/src/admin/enhancer/style.scss
@@ -14,5 +14,6 @@
 	.components-modal__content {
 		padding: 0;
 		margin: 0;
+		overflow-x: hidden !important;
 	}
 }
